# llm-assisted-customer-support

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LLM_Assist_Final_Presentation_50_Slides.pptx  PROJECT_FINAL_REPORT.md  README.md  docker-compose.yml  literature_review.md  pyproject.toml  sample_payloads.json  test_nvidia_direct.py  ~$LLM_Assist_Final_Presentation_50_Slides.pptx
.github/workflows/: ci.yml
app/: main.py
app/api/v1/: errors.py  routers.py
app/core/: config.py  dependencies.py  exceptions.py  logging.py
app/integrations/: __init__.py  zendesk_worker.py
app/models/: domain.py
app/services/: intent_fallback_service.py  llm_client.py  pipeline_service.py  quality_service.py  rag_service.py  summarization_service.py  triage_service.py  triage_transformer_predict.py
app/utils/: cache.py  metrics.py
data/: README.md  download_kaggle.py  policy_snippets.json
data/fixtures/: zendesk_ticket.json
data/golden/: README.md  eval_set.jsonl
data/processed/: maia_emotion.csv
docker/: prometheus.yml
docs/: ALIGNMENT_READINESS.md  ASSIGNMENT_ALIGNMENT_RUNBOOK.md  CLAIMS_EVIDENCE_MATRIX.md  CLEANUP_LOG.md  DATASETS.md  IMPLEMENTATION_CHANGELOG.xlsx  IMPLEMENTATION_REPORT.md  LECTURE_ALIGNMENT_TALK_TRACK.md  METHODOLOGY_EDA_AND_DL.md  PROJECT_FILE_MAP.md  VERIFICATION_REPORT.md  claude_code_setup.md
evaluation/: __init__.py  correlation.py  eda_loaders.py  metrics.py  splits.py
notebooks/: README.md  llm_assist_end_to_end_final.ipynb  llm_assist_showcase.ipynb  llm_assist_showcase_revised.ipynb
scripts/: build_combined_dataset.py  build_comprehensive_notebook.py  generate_presentation_assets.py  generate_synthetic_eval.py  prepare_all_datasets.py  prepare_real_dataset.py  run_eda.py  run_offline_eval.py  train_encoder_classifier.py  train_triage_transformer.py
tests/: conftest.py
tests/integration/: test_api.py  test_pipeline_e2e.py  test_pipeline_label_recovery.py
tests/unit/: test_api_security.py  test_eda_loaders.py  test_evaluation.py  test_intent_fallback_service.py  test_llm_client.py  test_quality_service.py  test_rag_service.py  test_settings_profiles.py  test_summarization_service.py  test_triage_service.py  test_triage_transformer_predict.py  test_zendesk_worker.py
