[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "support-triage"
version = "1.0.0"
description = "LLM-Augmented Customer Support Triage & Quality Monitoring"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "httpx>=0.27.0",
    "tenacity>=8.3.0",
    "structlog>=24.2.0",
    "prometheus-client>=0.20.0",
    "opentelemetry-api>=1.24.0",
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-instrumentation-fastapi>=0.45b0",
    "redis>=5.0.0",
    "python-dotenv>=1.0.0",
    "orjson>=3.10.0",
]

[project.optional-dependencies]
anthropic = [
    "anthropic>=0.28.0",
]
data = [
    "kagglehub>=0.3.0",
]
eval = [
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    "pandas>=2.1.0",
    "joblib>=1.3.0",
]
embedding = [
    "sentence-transformers>=3.0.0",
]
transformer = [
    "torch>=2.2.0",
    "transformers>=4.40.0",
    "accelerate>=0.30.0",
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "scikit-learn>=1.4.0",
]
eda = [
    "pandas>=2.1.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
]
dev = [
    "anthropic>=0.28.0",
    "pandas>=2.1.0",
    "scikit-learn>=1.4.0",
    "joblib>=1.3.0",
    "pytest>=8.2.0,<9",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "UP", "ANN", "S", "B", "A", "C4", "RET", "SIM"]
ignore = ["ANN101", "ANN102", "S101", "B008", "UP042", "S104", "E501", "ANN401"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN", "S106", "E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "app.core.logging",
    "app.utils.cache",
    "app.services.llm_client",
    "app.services.triage_transformer_predict",
]
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p no:asyncio --cov=app --cov=evaluation --cov-report=term-missing --cov-fail-under=80"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "evaluation*"]
